# pdfjs-haskell

./: .travis.yml  CHANGELOG.md  README.md  default.nix  jobsets.nix  pdfjs.cabal  reflex-platform.nix  release.nix  spec.json
exec/: Demo.hs
integration-tests/: default.nix  expected_canvas_bytes.txt  run-tests.sh  test.py
src/GHCJS/DOM/: PDF.hs
src/GHCJS/DOM/PDF/: Internal.hs
