cabal-version:       >=1.10
name:                pdfjs
version:             0.2.1
synopsis:           
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag Demo
  description: Enable demo
  default: False

library
  exposed-modules: GHCJS.DOM.PDF
                   GHCJS.DOM.PDF.Internal

  -- other-modules:
  -- other-extensions:
  build-depends:       base         >=4.11    && <4.13
                     , lens         >= 4.17   && < 4.18
                     , aeson        >= 1.4    && < 1.5
                     , bytestring   >= 0.10   && < 0.11
                     , data-default >= 0.7    && < 0.8
                     , ghcjs-dom    >= 0.9.2  && < 0.10
                     , jsaddle      >= 0.9.6  && < 0.10
                     , stm
                     , text         >= 1.2.3  && < 1.3
                     , reflex-dom-core

  hs-source-dirs:      src
  default-language:    Haskell2010

executable demo
  if flag(Demo)
     buildable: True
  else
     buildable: False
  main-is: Demo.hs
  hs-source-dirs: exec
  default-language: Haskell2010
  build-depends:
      base
    , pdfjs
    , data-default
    , bytestring
    , base64-bytestring
    , ghcjs-dom
    , jsaddle
    , reflex-dom
    , text
  if !impl(ghcjs)
    build-depends:
      jsaddle-warp
      , jsaddle-webkit2gtk
      , file-embed
